<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_photo_dialog"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFF"
              android:gravity="bottom"
              android:orientation="vertical"
              android:padding="5dip">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/btn_ago_30min"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/btn_ago_1h"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/btn_ago_6h"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/btn_ago_12h"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/btn_ago_24h"
        android:textSize="16sp"/>


    <Button
        android:id="@+id/btn_photo_choose_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/photo_gallery_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/btn_cancel"
        android:textSize="16sp"/>

</LinearLayout>