<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/persian_green"
        android:layoutMode="opticalBounds"
        android:minHeight="?attr/actionBarSize"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <TextView
            android:id="@+id/tv_createEvent_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tv_userinfo"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/textarea_border"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="头像"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sdv_userinfo_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:roundAsCircle="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="#E9E9EA"/>

        <RelativeLayout
            android:id="@+id/rl_change_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/et_user_name"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/et_userinfo_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/textarea_noborder"
                android:ellipsize="end"
                android:gravity="center"

                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"/>
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="#E9E9EA"/>

        <RelativeLayout
            android:id="@+id/rl_change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tv_login_mail"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/et_userinfo_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/textarea_noborder"
                android:ellipsize="end"
                android:gravity="center"

                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="#E9E9EA"/>

        <RelativeLayout
            android:id="@+id/rl_userinfo_validation_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/et_phone_numbers"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_userinfo_validation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/textarea_noborder"
                android:ellipsize="end"
                android:gravity="center"

                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="#E9E9EA"/>

        <RelativeLayout
            android:id="@+id/rl_userinfo_changePwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/et_password"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/textarea_noborder"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/tv_click_change"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>